# safepaw

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: __init__.py  config.yaml  pyproject.toml  run.py
backend/api/: routes.py  services.py
backend/core/: main.py  optimization.py
backend/core/data_models/: input_models.py  output_models.py
backend/core/mappers/: input_mappers.py  output_mappers.py
backend/core/mappers/datasets_mappers/: maternite_serializer.py
backend/core/utils/: data_utils.py  legacy_data_utils.py
backend/data/: metadata_toy.json  params_ptg_pth.json
backend/data/legacy/: dictionnaire_MCO_SSR_global.csv  legacy_format_Burdett_v0.txt  legacy_format_ptgptg.txt
backend/data/open_data/: fichier_maternites_112021.csv  summary_maternity_capacity.csv
docs/: _quarto.yml  about.qmd  index.qmd  instances.qmd  references.bib
docs/_site/: about.html  index.html  instances.html  search.json
frontend/: nginx.conf  nginx.conf.template  package-lock.json  package.json
frontend/public/: index.html
frontend/public/data/: regions.geojson
frontend/src/: App.css  App.js  index.js
frontend/src/components-js/: DashboardForm.js  DiagramForm.js  InputForms.js  InputJsonForm.js  InputManualForm.js  Map.js  ResultsForm.js  SliderForm.js  forms.css
frontend/src/components-js/layers/: FacilityCapacityLayer.js  FacilityLoadLayer.js  Legend.js  PatientsTransfersLayer.js  RegionFacilityLoadLayer.js
frontend/src/utils/: mapInitializer.js
tests/: conftests.py
tests/data/: reference_datamodel.json  reference_params.json
(+1 files in other folders)
