[project]
name = "safepaw"
version = "0.1.0"
description = ""
authors = [
    {name = "omar-rifai",email = "omar.void@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.123.7,<0.124.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pulp (>=3.3.0,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "xarray (>=2025.11.0,<2026.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "highspy (>=1.12.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyproj (>=3.6.0,<4.0.0)"
]

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
